syntax = "proto3";

package time;

option go_package = "./pkg/pb";

service TimeService {
  rpc CurrTime(CurrTimeRequest) returns (CurrTimeResponse) {}
}

message CurrTimeRequest {

}

message CurrTimeResponse {
  int64 status = 1;
  string time = 2;
}